<resources>
    <string name="app_name">Jetpack Compose Playground</string>

    <string name="msg_last_key_pressed">Last key pressed: %s</string>

    <string name="count_text">Count: %d</string>
    <string name="msg_derived_count">DerivedCount: %d</string>
    <string name="msg_side_effect_count">SideEffect: %d</string>
    <string name="btn_inc">Inc</string>

    <string name="tab_1">Tab 1</string>
    <string name="tab_1_details">Tab 1 - Details</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_2_details">Tab 2 - Details</string>
    <string name="msg_email">Email</string>
    <string name="btn_next">Next</string>
    <string name="msg_invalid_email">Email is invalid</string>
    <string name="btn_tab_2_details">Go to Tab 2 > Details</string>

    <string-array name="days_of_week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="months_abbreviation">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="msg_name">Name</string>
    <string name="msg_name_hint">Enter your name</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_paste">Paste</string>
    <string name="msg_clipboard_copy">Copied to clipboard</string>

    <string name="msg_fav_delete_title">Delete</string>
    <string name="msg_fav_delete_message">Do you want to remove \'%s\' from the favorites?</string>
    <string name="msg_fav_delete_confirm">Yep!</string>
    <string name="msg_fav_delete_cancel">Nope!</string>

    <string name="book_info_year_pages">Year: %1$d - Pages: %2$d</string>
    <string name="msg_book_list_empty">The book\'s list is empty!</string>

    <string name="tab_books">Books</string>
    <string name="tab_favorites">Favorites</string>
    <string name="msg_loading">Loading books…</string>

    <string name="msg_added_favorites">\'%s\' added to favorites!</string>

    <string name="show_toast">Toast</string>

    <string name="activity_java_text">This is a Java Activity using Compose</string>

    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>

    <string name="text_my_binding">My binding</string>
    <string name="btn_ok">OK</string>

    <string name="msg_change_language">Change language to Portuguese</string>
    <string name="btn_set_lang">Change Language</string>

    <string name="check_path" translatable="false">M 3 13 L 7 17 L 7 17 L 9 19 L 9 19 L 9 19 L 10 18 L 10 18 L 21 7 L 19 5 L 9 15 L 5 11 Z</string>
    <string name="cancel_path" translatable="false">M 4 6 L 10 12 L 4 18 L 6 20 L 12 14 L 18 20 L 20 18 L 14 12 L 20 6 L 18 4 L 12 10 L 6 4 Z</string>
</resources>