...
                .fillMaxWidth(.2f)
                .background(Color.Blue)
        )
    }
}

const val ConstraintLayoutScreenPastedTextTestTag = "clPastedText"
